Closed Bug 312660 Opened 20 years ago Closed 20 years ago

[BeOS]cannot navigate drop-down lists using keyboard when mouse cursor is over it

Categories

(Core Graveyard :: Widget: BeOS, defect)

x86
BeOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: sergei_d, Assigned: thesuckiestemail)

References

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

Open URL-bar history list, move mouse cursor inside list, try to use arrow keys to navigate it. Failure. At least in cvs-SeaMonkey. Actually it is long standing bug, missing in latest SeaMonkey builds from BeBits. I will investigate which changes in my private code set it work correctly
Same on Firefox as well.
For curious people. There is version of nsWindow without such issue http://beos.spb.ru/mozilla/nsWindow.cpp.newmouse http://beos.spb.ru/mozilla/nsWindow.h.newmouse but little steps i tried now to change current code to something similar were unsuccessfull. Tqh, if you have time at some moment, you can look there onto nsView::Mouse* methods and CallMethod() for those events
sure.
Ok, I think this one is nice. Two problems fixed: 1) MouseMoved was generated when no mouse-movement. These are now ignored when it doesn't enter / exit view. 2) We updated buttons in mouseMoved, which if you moved and released mouse would set buttons to zero, making mouseUp not to be sent. We now rely on mouseDown and mouseUp to always control the state of buttons. Sergei, if you don't find any problems with this you can review it.
Assignee: sergei_d → thesuckiestemail
Status: NEW → ASSIGNED
will apply it manually, as there is InlineIME inside my nsWindow.cpp:)
Comment on attachment 199821 [details] [diff] [review] Fix for keyboard nav, and missing mouseUp fixes problem. r=sergei_d
Attachment #199821 - Flags: review+
Checking in mozilla/widget/src/beos/nsWindow.cpp; /cvsroot/mozilla/widget/src/beos/nsWindow.cpp,v <-- nsWindow.cpp new revision: 1.102; previous revision: 1.101 done Checking in mozilla/widget/src/beos/nsWindow.h; /cvsroot/mozilla/widget/src/beos/nsWindow.h,v <-- nsWindow.h new revision: 1.40; previous revision: 1.39 done closing bug
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
This fix will need to move into the 1_8 branch. Adding to the tracker.
Blocks: 311032
Comment on attachment 199821 [details] [diff] [review] Fix for keyboard nav, and missing mouseUp Requesting approval. This is a BeOS change only and will not affect any other platforms.
Attachment #199821 - Flags: approval1.8.1?
Comment on attachment 199821 [details] [diff] [review] Fix for keyboard nav, and missing mouseUp a=darin on behalf of drivers
Attachment #199821 - Flags: approval1.8.1? → approval1.8.1+
Sergei, could you commit this next in the branch?
Checking in mozilla/widget/src/beos/nsWindow.cpp; /cvsroot/mozilla/widget/src/beos/nsWindow.cpp,v <-- nsWindow.cpp new revision: 1.91.4.13; previous revision: 1.91.4.12 done Checking in mozilla/widget/src/beos/nsWindow.h; /cvsroot/mozilla/widget/src/beos/nsWindow.h,v <-- nsWindow.h new revision: 1.35.4.8; previous revision: 1.35.4.7 done
Keywords: fixed1.8.1
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: