[BeOS]bug 312660. fix issue with button-navigation over lists, p=thesuckiestmail, r=sergei_d, BeOS-only