widget/src/beos/nsWindow.h
@@ -336,7 +336,7 @@ public:
 
 private:
 	void                 DoDraw(BRect updateRect);
-	BPoint               lastViewPoint;
+	BPoint               mousePos;
 	uint32               mouseMask;
 	bool                 restoreMouseMask;	
 };
